--- a/styles/home.css
+++ b/styles/home.css
@@ -85,8 +85,22 @@ body{
 }
 
 footer{
-    height: 600px;
-    background-image: url(../src/footer/footer.png);
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    height: 300px;
+    width: 100%;
+    background-color: #F19BC0;
+    background-image: url(../src/footer/footer.jpeg);
     background-size: contain;
     background-repeat: no-repeat;
+    
+}
+
+.footer__map{
+    margin: 0;
+    display: flex;
+    justify-content: end;
+
+
 }
